--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   cloud_firestore: ^2.4.0
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
 
 dev_dependencies:
   flutter_test:
