--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_auth: ^3.0.1
   cloud_firestore: ^2.4.0
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
+  animated_text_kit: ^4.2.1
+
 
 dev_dependencies:
   flutter_test:
