--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   animated_text_kit: ^4.2.1
+  animations: ^2.0.1
 
 
 dev_dependencies:
